--- a/paginario/index.html
+++ b/paginario/index.html
@@ -112,7 +112,7 @@
     <div class="caixa">
         <h1>BIBLIOTECA VIRTUAL</h1>
         <a href="entrar.php" class="botao">ENTRAR</a>
-        <a href="cadrastrar.php" class="botao">CADASTRAR</a>
+        <a href="cadastrar.php" class="botao">CADASTRAR</a>
     </div>
 
     <div class="rodape">
