--- a/paginario/inicio.html
+++ b/paginario/inicio.html
@@ -24,7 +24,7 @@
   height: 80px;
   display: flex;
   align-items: center;
-  justify-content: center; /* título centralizado */
+  justify-content: center; 
 }
 
 header h1 {
@@ -34,10 +34,10 @@ header h1 {
   text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
   position: absolute;
   left: 50%;
-  transform: translateX(-50%); /* mantém centralizado */
+  transform: translateX(-50%); 
 }
 
-/* Barra de pesquisa no canto direito */
+
 
 .search-container {
   position: absolute;
@@ -267,14 +267,14 @@ header input[type="text"] {
 #myInput {
   width: 250px;
   font-size: 16px;
-  padding: 12px 20px 12px 40px; /* espaço à esquerda para a lupa */
+  padding: 12px 20px 12px 40px; 
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-bottom: 20px;
-  background-image: url('img/magnifying-glass-1976105_1280.png'); /* sua lupa */
-  background-position: 10px center; /* posição da lupa */
+  background-image: url('img/magnifying-glass-1976105_1280.png'); 
+  background-position: 10px center; 
   background-repeat: no-repeat;
-  background-size: 18px 18px; /* deixa pequena */
+  background-size: 18px 18px; 
 }
 
 #myInput:focus {
